<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTask">

  <TextView
      android:id="@+id/AddTaskSinglePage"
      android:layout_width="183dp"
      android:layout_height="0dp"
      android:layout_marginStart="53dp"
      android:layout_marginTop="61dp"
      android:layout_marginBottom="51dp"
      android:text="@string/add_taskSinglePageTitle"
      android:textSize="30sp"
      app:layout_constraintBottom_toTopOf="@+id/TaskTitle"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <EditText
      android:id="@+id/TaskTitle"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_marginStart="32dp"
      android:layout_marginTop="167dp"
      android:layout_marginEnd="32dp"
      android:layout_marginBottom="49dp"
      android:ems="10"
      android:hint="Enter Your new Task"
      android:inputType="textPersonName"
      android:text=""
      app:layout_constraintBottom_toTopOf="@+id/taskDescription"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <EditText
      android:id="@+id/taskDescription"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_marginStart="30dp"
      android:layout_marginTop="268dp"
      android:layout_marginEnd="30dp"
      android:layout_marginBottom="236dp"
      android:ems="10"
      android:hint="Give Description for it"
      android:inputType="textPersonName"
      android:text=""
      app:layout_constraintBottom_toTopOf="@+id/total_Tasks"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <Button
      android:id="@+id/submitButtonTask"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="265dp"
      android:text="@string/submit_ButtonAddTask"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="@+id/total_Tasks"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="@+id/TaskTitle"
      app:layout_constraintTop_toBottomOf="@+id/taskDescription"
      app:layout_constraintVertical_bias="0.969" />

  <TextView
      android:id="@+id/total_Tasks"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="28dp"
      android:layout_marginBottom="132dp"
      android:text="@string/total_taskCounter"
      android:textSize="30dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>